# coding-service

./: .gitignore  LICENSE  README.md  changelog.md  coding-service-api.yaml  package-lock.json  package.json  redocly.yml
.github/workflows/: publish.yml
docs/: index.html  scalar.html
schemes/: response.schema.json
src/: api.http  api.yaml  http-client.env.json  response.schema.json
src/python/ics_models/: pyproject.toml  setup.py
src/python/ics_models/ics_models/: __init__.py  code.py  coder.py  data_chunk.py  response.py  service_info.py  service_info_instructions_schema.py  service_mode.py  task.py  task_action.py  task_event.py  task_event_type.py  task_seed.py  task_type.py  task_update.py
src/python/ics_models/ics_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python/models/: chunk_type.py  coder.py  data_chunk.py  response.py  service_info.py  task.py  task_event.py  task_instructions.py  task_seed.py  task_update.py
src/test/: api.http
src/ts/: package_npm.json  tsconfig.json
src/ts/functions/: common.typeguards.ts  debug-typeguard.ts  ics-api.typeguards.spec.ts  ics-api.typeguards.ts  iqb.typeguards.ts
src/ts/interfaces/: ics-api.interfaces.ts  iqb.interfaces.ts
test/: api.http  train.test.http
test/data/: EL105a_t_toIQBS.predict.json  EL105a_t_toIQBS.train.json  coding-data.csv  training-data.csv
